# MathCATForPython

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README  README.install  README.md  build-addon.sh  build-nvda-addon.sh  build.rs  buildVars.py  flake8.ini  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  sconstruct  tasks.json  test.py  v0.7.2-rc.3.json  v0.7.2-rc.4.json  v0.7.4-beta1.json
.cargo/: config.toml
.github/workflows/: automaticRelease.yaml  checkTranslatorsComments.yaml  checkTranslatorsComments.yml  lint.yaml  manualRelease.yaml  requirements.txt
Example/: test.py
NVDA-addon/: 0.2.1.json  0.2.2.json  0.2.5.json  0.2.6.json  0.3.0.json  0.3.1.json  0.3.2.json  0.3.3.json  MathCAT-0.2.0.json  README  README.install  README.md.bak  build.sh  buildVars.py
NVDA-addon/addon/globalPlugins/MathCAT/: MathCAT.py  MathCATPreferences.py  MathCATgui.py  __init__.py  libmathcat.pyd
NVDA-addon/addon/globalPlugins/MathCAT/yaml/: _yaml.cp37-win32.pyd
NVDA-addon/doc/id/: readme.md
addon/doc/da/: readme.md
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fi/: readme.md
addon/doc/fr/: readme.md
addon/doc/ru/: readme.md
addon/doc/tr/: readme.md
addon/doc/zh_CN/: readme.md
addon/globalPlugins/MathCAT/: MathCAT.py  MathCATPreferences.py  MathCATgui.py  __init__.py
addon/globalPlugins/MathCAT/yaml/: __init__.py  _yaml.cp311-win32.pyd  _yaml.cp312-win32.pyd  composer.py  constructor.py  cyaml.py  dumper.py  emitter.py  error.py  events.py  loader.py  nodes.py  parser.py  reader.py  representer.py  resolver.py  scanner.py  serializer.py  tokens.py
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
site_scons/site_tools/gettexttool/: __init__.py
src/: lib.rs
wxFormBuilder/: MathCATgui.fbp
