# This will build for the target platform
# The python must match that (i.e., 64 bit platforms need 64 bit pythons by default)
# You can specify which python to use by setting the environment variable PYO3_PYTHON to point to that python
# For example
#   env PYO3_PYTHON=C:/usr/bin/python32-3.8 cargo build --target i686-pc-windows-msvc --release

[package]
name = "MathCatForPython"
version = "0.6.7-rc.6"
authors = ["Neil Soiffer <soiffer@alum.mit.edu>"]
edition = "2018"
resolver = "2"    # allows different build dependency features


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[lib]
name = "libmathcat_py"
crate-type = ["cdylib"]

[dependencies.mathcat]
version = "0.6.7-rc.6"
# for testing MathCAT without having to publish a new version (change two occurrences)
# path = "../MathCAT/"
features = ["include-zip"]   # for building, we want the zip files so we can include them separately

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "abi3"]

[build-dependencies]
zip = { version = "2.1", default-features = false, features = ["bzip2"] }
mathcat = {version = "0.6.7-rc.6", features = ["include-zip"]}     # for building, we want the zip files so we can include them separately
# mathcat = { path = "../MathCAT/", features = ["include-zip"]}     # for building, we want the zip files so we can include them separately
# for testing MathCAT without having to publish a new version (change two occurrences)



[profile.release]
lto = true
# opt-level = "z"  # Optimize for size.
